# creator

./: .gitignore  database.py  main.py  pyproject.toml  readme.md
creator/: __init__.py  llm.py  main.py
creator/content_creator/: ContentCreator.py
creator/dspy_components/: __init__.py
creator/dspy_components/base/: cloze.py  single_choice.py  text.py
creator/dspy_components/test/: cloze.py  text.py
creator/examples/: .gitignore  __init__.py
creator/examples/modules/: simple.py
creator/examples/signatures/: __init__.py  simple_signatures.py
creator/lib/: loader.py  parsers.py  schemas.py  types.py  vis.py  zip_folder.py
creator/schemas/: __init__.py  base.py
creator/schemas/simple/: __init__.py  drag_text.py  single_choice.py  text.py
creator/schemas/with_evidence/: drag_text.py  single_choice.py  text.py
creator/unit/: unit.py
creator/unit_assembler/: UnitAssembler.py  config.yml  template_readme.md
creator/unit_assembler/preprocess/: single_choice.py
creator/unit_assembler/resources/templates/jinja/default/: drag_text.j2  main.j2  single_choice.j2  slide.j2  text.j2
creator/unit_assembler/resources/templates/units/default/: h5p.json
creator/unit_assembler/resources/templates/units/default/content/: content.json
docker/: .dockerignore  dockerfile
lib/: loader.py  logger.py  zip_folder.py
unit_assembler/: UnitAssembler.py  config.yml
unit_assembler/preprocess/: __init__.py  single_choice.py
