[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.0.4",
    "dotenv>=0.9.9",
    "jinja2>=3.1.6"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
creator = [
    "unit_assembler/config.yml",
    "unit_assembler/resources/**",
]